# c-csv

./: .gitignore  CMakeLists.txt
include/: csv.h  utils.h
src/: buffer.c  buffer.h  csv.c  record.c  record.h  utils.c
test/: test.c  test.csv
